poc/traefik/ingress.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-basic-auth
spec:
  basicAuth:
    secret: authsecret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    #CHANGE ME to MATCH LB
    - match: Host(`CHANGEME`)
      kind: Rule
      middlewares:
        - name: nginx-basic-auth
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: pebble
